--- a/Michelles_Portfolio/src/components/ProjectScreens/Projectscreen.css
+++ b/Michelles_Portfolio/src/components/ProjectScreens/Projectscreen.css
@@ -1,11 +1,11 @@
 .projectScreen {
 
-    margin-top: 5rem;
-    margin-bottom: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    margin-top: 5rem;
+    margin-bottom: 5rem;
     gap: 4rem;
 
 }
@@ -22,7 +22,7 @@
 
     img {
 
-        width: 6em;
+        width: 80px;
 
     }
 
@@ -38,7 +38,7 @@
 
     color: rgb(10, 0, 148);
     background-color: rgb(158, 218, 255);
-    box-shadow: 0 0 1rem 0.25rem rgb(130, 163, 254);
+    box-shadow: 0 0 10px 5px rgb(130, 163, 254);
 
 }
 
@@ -47,14 +47,14 @@
 .projectGeneralButton {
 
     padding: 1rem 1.5rem;
-    border-radius: 0.5rem;
+    border-radius: 7px;
 
     color: rgb(61, 0, 59);
     background-color: rgb(239, 168, 255);
-    border-left: 0.25rem solid rgb(90, 0, 104);
-    border-bottom: 0.25rem solid rgb(90, 0, 104);
-    border-top: 0.1rem solid rgb(90, 0, 104);
-    border-right: 0.1rem solid rgb(90, 0, 104);
+    border-left: 3px solid rgb(90, 0, 104);
+    border-bottom: 3px solid rgb(90, 0, 104);
+    border-top: 1px solid rgb(90, 0, 104);
+    border-right: 1px solid rgb(90, 0, 104);
 
     animation:  glowing-light-pink 3s infinite;
 
@@ -65,10 +65,10 @@
 
     color: white;
     background-color: rgb(129, 0, 133);
-    border-left: 0.25rem solid rgb(41, 0, 47);
-    border-bottom: 0.25rem solid rgb(41, 0, 47);
-    border-top: 0.1rem solid rgb(41, 0, 47);
-    border-right: 0.1rem solid rgb(41, 0, 47);
+    border-left: 3px solid rgb(41, 0, 47);
+    border-bottom: 3px solid rgb(41, 0, 47);
+    border-top: 1px solid rgb(41, 0, 47);
+    border-right: 1px solid rgb(41, 0, 47);
 
     animation: glowing-dark-pink 3s infinite;
 
@@ -114,16 +114,16 @@
 
 .projectVideoCard {
 
+    width: 12rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 12em;
+
     padding: 2rem;
     gap: 1.5rem;
 
     color: rgb(227, 192, 255);
-    box-shadow: 0 0 1vh 0.75vh rgb(195, 117, 255); 
 
     animation: glowing-light-purple 2s infinite;
     transition: transform 0.25s ease;
@@ -132,27 +132,22 @@
 
         width: 100%;
 
-        box-shadow: 0 0 1vh 0.5vh rgb(195, 117, 255); 
-
         animation: glowing-light-purple 2s infinite;
 
     }
 
-
 }
 
-.projectVideoCard:hover {
 
-    transform: scale(1.1);
+.projectVideoCard:hover {
     
     color: rgb(249, 192, 255);
-    box-shadow: 0 0 1vh 0.75vh rgb(244, 93, 255);
 
     animation: glowing-dark-pink 2s infinite;
+    transform: scale(1.1);
 
     img {
 
-        box-shadow: 0 0 1vh 0.5vh rgb(244, 93, 255);
         animation: glowing-dark-pink 2s infinite;
 
     }
@@ -174,14 +169,14 @@
 .projectLinkButton{
 
     padding: 1.5rem 2rem;
-    border-radius: 0.5rem;
+    border-radius: 8px;
     
     color: rgb(58, 0, 139);
     background-color: rgb(208, 179, 255);
-    border-left: 0.3rem solid rgb(55, 0, 144);
-    border-bottom: 0.3rem solid rgb(55, 0, 144);
-    border-top: 0.1rem solid rgb(55, 0, 144);
-    border-right: 0.1rem solid rgb(55, 0, 144);
+    border-left: 3.5px solid rgb(55, 0, 144);
+    border-bottom: 3.5px solid rgb(55, 0, 144);
+    border-top: 1.5px solid rgb(55, 0, 144);
+    border-right: 1.5px solid rgb(55, 0, 144);
 
     animation: glowing-light-purple 3s infinite;
 
@@ -192,10 +187,10 @@
 
     color: white;
     background-color: rgb(64, 0, 183);
-    border-left: 0.3rem solid rgb(17, 0, 50);
-    border-bottom: 0.3rem solid rgb(17, 0, 50);
-    border-top: 0.1rem solid rgb(17, 0, 50);
-    border-right: 0.1rem solid rgb(17, 0, 50);
+    border-left: 3.5px solid rgb(17, 0, 50);
+    border-bottom: 3.5px solid rgb(17, 0, 50);
+    border-top: 1.5px solid rgb(17, 0, 50);
+    border-right: 1.5px solid rgb(17, 0, 50);
 
     animation: glowing-dark-blue 3s infinite;
 
