--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Contact.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Contact.css
@@ -1,11 +1,3 @@
-.contactSection{
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
-
 .contactContainer {
     
     display: flex;
@@ -14,27 +6,24 @@
     flex-wrap: wrap;  
 
     gap: 3rem;
-    padding: 4rem;
     
 }
 
 .contactBox{
 
-    width: 10em;
-    height: 10em;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
     border-radius: 50%;
-    padding: 1em;
+    padding: 2rem;
 
     background-color: rgb(101, 255, 255);
-    border-left: 0.6vh solid rgb(42, 82, 82);
-    border-bottom: 0.6vh solid rgb(42, 82, 82);
-    border-top: 0.15vh solid rgb(42, 82, 82);
-    border-right: 0.15vh solid rgb(42, 82, 82);
+    border-left: 4px solid rgb(42, 82, 82);
+    border-bottom: 4px solid rgb(42, 82, 82);
+    border-top: 1px solid rgb(42, 82, 82);
+    border-right: 1px solid rgb(42, 82, 82);
 
     animation: glowing-light-turquoise 3s infinite;
 
@@ -43,10 +32,10 @@
 .contactBox:hover{
 
     background-color: rgb(44, 147, 147);
-    border-left: 0.6vh solid rgb(19, 72, 72);
-    border-bottom: 0.6vh solid rgb(19, 72, 72);
-    border-top: 0.15vh solid rgb(19, 72, 72);
-    border-right: 0.15vh solid rgb(19, 72, 72);
+    border-left: 4px solid rgb(19, 72, 72);
+    border-bottom: 4px solid rgb(19, 72, 72);
+    border-top: 1px solid rgb(19, 72, 72);
+    border-right: 1px solid rgb(19, 72, 72);
 
     animation: glowing-dark-turquoise 3s infinite;
 
@@ -54,43 +43,15 @@
 
 .contactImage{
 
-    width: 55%;
+    height: 70px;
+    width: 70px;
 
 }
 
 
 @media (max-device-width: 1024px) and (orientation: portrait) and (hover: none){
 
-    .contactContainer{
-            
-        display: flex;
-        flex-direction: column;
-        align-items: center;
 
-        gap: 5vh;
-        padding: 5vh 5vw;
 
-    }
-
-    .contactBox{
-
-        width: 8em;
-        height: 8em;
-
-        border-radius: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        padding: 1rem 4rem;
-
-    }
-
-    .contactImage{
-
-        max-width: 70%;
-
-    }
 
 }
