--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Introduction.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Introduction.css
@@ -8,14 +8,14 @@
 .resumeButton {
 
   padding: 1.5rem 2rem;
-  border-radius: 0.5rem;
+  border-radius: 5px;
 
   color: rgb(0, 58, 103);
   background-color: rgb(156, 240, 255);
-  border-left: 0.3rem solid rgb(0, 104, 104);
-  border-bottom: 0.3rem solid rgb(0, 104, 104);
-  border-top: 0.1rem solid rgb(0, 104, 104);
-  border-right: 0.1rem solid rgb(0, 104, 104);
+  border-left: 3.5px solid rgb(0, 104, 104);
+  border-bottom: 3.5px solid rgb(0, 104, 104);
+  border-top: 1px solid rgb(0, 104, 104);
+  border-right: 1px solid rgb(0, 104, 104);
 
   animation: glowing-light-turquoise 3s infinite;
 
@@ -25,10 +25,10 @@
 
   color: white;
   background-color: rgb(82, 93, 255);
-  border-left: 0.3rem solid rgb(29, 33, 95);
-  border-bottom: 0.3rem solid rgb(29, 33, 95);
-  border-top: 0.1rem solid rgb(29, 33, 95);
-  border-right: 0.1rem solid rgb(29, 33, 95);
+  border-left: 3.5px solid rgb(29, 33, 95);
+  border-bottom: 3.5px solid rgb(29, 33, 95);
+  border-top: 1px solid rgb(29, 33, 95);
+  border-right: 1px solid rgb(29, 33, 95);
 
   animation: glowing-dark-blue 3s infinite;
 
