--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/SkillsComponents/SkillsExpandedCard.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/SkillsComponents/SkillsExpandedCard.css
@@ -9,7 +9,7 @@
     justify-content: center;
 
     background-color: rgba(103, 121, 255, 0.5);
-    box-shadow: 0 0 1rem 0.25rem rgb(154, 141, 255);
+    box-shadow: 0 0 8px 4px rgb(154, 141, 255);
 
 }
 
@@ -21,12 +21,12 @@
     flex-direction: column;
     align-items: center;
 
-    border-radius: 2rem;
+    border-radius: 15px;
     padding: 3rem 1rem;
     gap: 2rem;
 
     background-color: rgba(13, 0, 39, 0.65);
-    box-shadow: 0 0 1rem 0.25rem rgb(169, 163, 255);
+    box-shadow: 0 0 8px 4px rgb(169, 163, 255);
 
 }
 
@@ -43,14 +43,14 @@
 .skillExpandedCardButton {
 
     padding: 1rem 1.5rem;
-    border-radius: 0.5rem;
+    border-radius: 5px;
 
     color: rgb(14, 0, 104);
     background-color: rgb(200, 233, 255);
-    border-left: 0.3rem solid rgb(0, 71, 118);
-    border-bottom: 0.3rem solid rgb(0, 71, 118);
-    border-top: 0.1rem solid rgb(0, 71, 118);
-    border-right: 0.1rem solid rgb(0, 71, 118);
+    border-left: 3.5px solid rgb(0, 71, 118);
+    border-bottom: 3.5px solid rgb(0, 71, 118);
+    border-top: 1px solid rgb(0, 71, 118);
+    border-right: 1px solid rgb(0, 71, 118);
 
     animation: glowing-light-turquoise 3s infinite;
 
@@ -60,10 +60,10 @@
 
     color: white;
     background-color: rgb(0, 52, 184);
-    border-left: 0.3rem solid rgb(6, 0, 67);
-    border-bottom: 0.3rem solid rgb(6, 0, 67);
-    border-top: 0.1rem solid rgb(6, 0, 67);
-    border-right: 0.1rem solid rgb(6, 0, 67);
+    border-left: 3.5px solid rgb(6, 0, 67);
+    border-bottom: 3.5px solid rgb(6, 0, 67);
+    border-top: 1px solid rgb(6, 0, 67);
+    border-right: 1px solid rgb(6, 0, 67);
 
     animation: glowing-dark-blue 3s infinite;
 
