--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Contact.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Contact.css
@@ -2,7 +2,6 @@
     
     display: flex;
     flex-direction: row;
-    justify-content: start;
     flex-wrap: wrap;  
 
     gap: 3rem;
@@ -51,7 +50,25 @@
 
 @media (max-device-width: 1024px) and (orientation: portrait) and (hover: none){
 
+    .contactContainer {
 
+        gap: 5rem;
+        
+    }
+
+    .contactBox{
+
+        border-radius: 15px;
+        padding: 3rem;
+
+    }
+
+    .contactImage{
+
+        height: 90px;
+        width: 90px;
+
+    }
 
 
 }
