--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Projects.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Projects.css
@@ -25,7 +25,6 @@
 .projectCard{
 
     width: 60%;
-    max-width: 100rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -117,9 +116,66 @@
 
 
 
-
 /* Mobile adjustments */
-@media (max-device-width: 1024px) and (orientation: portrait) and (hover: none) {
+@media (max-width: 900px) {
+
+    .projectsContainer{
+
+        gap: 5rem;
+
+    }
+
+    .projectContainer {
+
+        flex-direction: column;
+
+        gap: 5rem;
+
+    }
+
+
+    .projectCard{
+
+        width: 90%;
+
+        padding: 2rem 1rem;
+
+    }
+
+    .projectIntroContainer {
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        gap: 4rem;
+        padding: 1.5rem;
+
+    }
+
+
+    .projectSummaryContainer{
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        gap: 1rem;
+
+    }
+
+
+    .projectImage {
+
+        width: 120px;
+
+    }
+
+}
+
+
+@media (max-device-width: 1024px) {
 
     .projectsContainer{
 
@@ -140,6 +196,8 @@
     .projectCard{
 
         width: 90%;
+
+        padding: 2rem 1rem;
 
     }
 
@@ -178,5 +236,5 @@
         padding: 2.5rem 3rem;
 
     }
-    
+
 }
