--- a/Michelles_Portfolio/src/components/ProjectScreens/components/Projectscreen.css
+++ b/Michelles_Portfolio/src/components/ProjectScreens/components/Projectscreen.css
@@ -49,7 +49,7 @@
     border-radius: 7px;
 
     color: rgb(61, 0, 59);
-    background-color: rgb(239, 168, 255);
+    background-color: rgb(232, 131, 255);
     border-left: 3px solid rgb(90, 0, 104);
     border-bottom: 3px solid rgb(90, 0, 104);
     border-top: 1px solid rgb(90, 0, 104);
@@ -78,8 +78,8 @@
 
     width: 90%;
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
 
     gap: 4rem;
     padding: 1rem;
@@ -100,15 +100,17 @@
 
 .projectDetailsInfoBlockContainer {
 
-    width: 85%;
     display: flex;
     flex-direction: column;
 
     gap: 2rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
 
     color: white;
 
 }
+
 
 .projectVideoSectionContainer {
 
@@ -224,7 +226,7 @@
 
 
 /* Mobile adjustments */
-@media (max-device-width: 1024px) and (orientation: portrait) and (hover: none) {
+@media (max-device-width: 1024px){
     
     .projectScreen {
 
@@ -242,9 +244,8 @@
             width: 90px;
 
         }
-
+    
     }
-
 
 
     .projectGeneralButton {
@@ -257,15 +258,17 @@
     .projectDetailsContainer{
 
         width: 95%;
+        
+        gap: 6rem;
 
     }
 
+
     .projectDetailsInfoBlockContainer {
 
-        width: 90%;
-        
         gap: 3rem;
-        padding: 3rem 2rem;
+        padding-left: 4rem;
+        padding-right: 4rem;
 
     }
 
