--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Introduction.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Introduction.css
@@ -39,7 +39,7 @@
 
 
 /* Mobile adjustments */
-@media (max-device-width: 1024px){
+@media (max-device-width: 1024px) and (pointer: coarse){
 
   .resumeButton {
 
