--- a/Michelles_Portfolio/src/components/Homescreen/Homescreen.css
+++ b/Michelles_Portfolio/src/components/Homescreen/Homescreen.css
@@ -97,7 +97,7 @@
 
 
 /* Mobile adjustments */
-@media (max-device-width: 1024px) {
+@media (max-device-width: 1024px) and (pointer: coarse) {
   
   .portfolioContentScreen {
 
