--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Projects.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/Projects.css
@@ -116,8 +116,7 @@
 
 
 
-/* Mobile adjustments */
-@media (max-width: 900px) {
+@media (max-width: 900px) and (pointer: fine){
 
     .projectsContainer{
 
@@ -141,6 +140,7 @@
         padding: 2rem 1rem;
 
     }
+
 
     .projectIntroContainer {
 
@@ -175,7 +175,7 @@
 }
 
 
-@media (max-device-width: 1024px) {
+@media (max-device-width: 1024px) and (pointer: coarse) {
 
     .projectsContainer{
 
@@ -198,6 +198,7 @@
         width: 90%;
 
     }
+
 
     .projectIntroContainer {
 
