--- a/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/SkillsComponents/SkillsExpandedCard.css
+++ b/Michelles_Portfolio/src/components/Homescreen/HomescreenComponents/SkillsComponents/SkillsExpandedCard.css
@@ -70,7 +70,7 @@
 
 
 
-@media (max-width: 900px){
+@media (max-width: 900px) and (pointer: fine){
 
     .skillExpandedCard{
 
@@ -89,7 +89,7 @@
 }
 
 
-@media (max-device-width: 1024px){
+@media (max-device-width: 1024px) and (pointer: coarse){
 
     .skillExpandedCard{
 
