--- a/Michelles_Portfolio/src/App.css
+++ b/Michelles_Portfolio/src/App.css
@@ -15,6 +15,7 @@ html {
 body{
 
   min-height: 100vh;
+  min-width: 20rem;
   display: flex;
   flex-direction: column;
 
@@ -363,12 +364,11 @@ p, button, a {
 
 
 
-@media (max-width: 600px) {
+@media (max-width: 600px) and (pointer: fine) {
 
   body{
 
     width: 100vw;
-    min-width: 20rem;
 
     padding: 4rem 2rem;
     margin: 0rem;
