--- a/Michelles_Portfolio/src/App.css
+++ b/Michelles_Portfolio/src/App.css
@@ -364,22 +364,6 @@ p, button, a {
 
 
 
-@media (max-width: 600px) and (pointer: fine) {
-
-  body{
-
-    width: 100vw;
-
-    padding: 4rem 2rem;
-    margin: 0rem;
-
-    animation: none;
-    
-  }
-
-}
-
-
 @media (max-device-width: 1024px)  and (pointer: coarse) {
 
   h1{
@@ -420,4 +404,20 @@ p, button, a {
 
   }
   
+}
+
+
+@media (max-width: 600px) {
+
+  body{
+
+    width: 100vw;
+
+    padding: 4rem 2rem;
+    margin: 0rem;
+
+    animation: none;
+    
+  }
+
 }
