--- a/Michelles_Portfolio/src/App.css
+++ b/Michelles_Portfolio/src/App.css
@@ -407,7 +407,63 @@ p, button, a {
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 600px) and (pointer: coarse){
+
+
+  body{
+
+    width: 100vw;
+
+    padding: 4rem 2rem;
+    margin: 0rem;
+
+    animation: none;
+    
+  }
+
+
+  h1{
+
+    font-size: calc(var(--default-font-size-mobile)*4);
+
+  }
+
+  h2 {
+
+    font-size: calc(var(--default-font-size-mobile)*2);
+
+  }
+
+  h3 {
+
+    font-size: calc(var(--default-font-size-mobile)*1.5);
+
+  }
+
+
+  h4{
+
+    font-size: calc(var(--default-font-size-mobile)*1.3);
+
+  }
+
+  p, button, a {
+
+    font-size: var(--default-font-size-mobile);
+
+  }
+
+  .heading{
+
+    gap: 2rem;
+
+  }
+
+
+}
+
+
+@media (max-width: 600px) and (pointer: fine){
 
   body{
 
