--- a/Michelles_Portfolio/src/components/Homescreen/Homescreen.css
+++ b/Michelles_Portfolio/src/components/Homescreen/Homescreen.css
@@ -105,7 +105,7 @@
 
   }
 
-
+/*
   .navContainer{
 
     gap: 5rem;
@@ -123,7 +123,7 @@
     padding: 2rem 2.5rem;
 
   }
-
+*/
 
   .swipingContentScreen {
 
