--- a/Michelles_Portfolio/src/App.css
+++ b/Michelles_Portfolio/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
 :root {
 
   --default-font-size: 1rem;
@@ -51,6 +53,13 @@ a, a:link, a:visited, a:hover {
 
   text-decoration: none;
   font-weight: bold;
+
+}
+
+
+h1, h2, h3, h4 {
+
+    font-family: 'Orbitron', monospace;
 
 }
 
